Created the user profile pages

--- a/public/stylesheets/profile-db.css
+++ b/public/stylesheets/profile-db.css
@@ -53,6 +53,12 @@
 .ticket-field span {
     margin-left: 0.8rem;
 }
+
+#alertMsg {
+    display: absolute;
+    top: 1rem;
+    /* left: 50%; */
+}
 /* 
 form {
     display: flex;
