--- a/views/components/sidebar.pug
+++ b/views/components/sidebar.pug
@@ -2,15 +2,17 @@
 .col-md-2.sidebar.px-3
     ul.list-unstyled.list-group
         li.py-2 
-            a(href="/profile-edit") Edit profile
+            a(href="/profile/edit-profile") Edit profile
         li.py-2 
-            a(href="/change-passwd") Reset password
+            a(href="/profile/reset-password") Reset password
         li.py-2
-            a(href="/manage-resort-reservation") Manage resort reservations
+            a(href="/profile/manage-resort-reservation") Manage resort reservations
         li.py-2
-            a(href="/profile-buy-ticket") Buy tickets
+            a(href="/profile/buy-ticket") Buy tickets
         li.py-2 
-            a(href="/refund-ticket") Refund ticket 
+            a(href="/profile/refund-ticket") Refund ticket 
         li.py-2 
-            a(href="/manage-restaurant-reservation") Manage restaurant reservations
+            a(href="/profile/manage-restaurant-reservation") Manage restaurant reservations
+        li.py-2 
+            a(href="/profile/edit-visitor") Edit visitor registration
     
