--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -5,6 +5,6 @@ nav.row.bg-dark.text-light.py-4.px-3
         div 
             p= email 
             a(href="/logout").btn.btn-primary Sign out
-        a(href="/profile") 
-            img(src="images/house-fill.svg", alt="home icon")
+        a(href="/profile/") 
+            img(src="../images/house-fill.svg", alt="home icon")
     
