--- a/views/profile/edit-visitor.pug
+++ b/views/profile/edit-visitor.pug
@@ -23,4 +23,4 @@ block main-grid
                 input.form-control#age(type="number", name="age", min="9" required)
             button.btn.btn-primary(type="submit") Submit
     else 
-        p You have not registered as a visitor yet! You need to purchase a ticket <b>once</b> to register
+        p You have not registered as a visitor yet! You need to purchase a day pass <b>once</b> to register
