--- a/views/profile/manage-resort-res.pug
+++ b/views/profile/manage-resort-res.pug
@@ -8,9 +8,9 @@ block main-grid
             //-reservation.hasReservation
             h1.title Manage resort reservation
             p.fst-italic.
-                Note: In addition to your ticket, you may be asked to present a government identification such as a drivers license to verify your identity upon collecting your keycard
+                Note: In addition to your pass, you may be asked to present a government identification such as a drivers license to verify your identity upon collecting your keycard
             .details.mt-3 
-                h3 Ticket number*: #{tnumber}
+                h3 Pass number*: #{tnumber}
                 h3 First name: #{fname}
                 h3 Last name: #{lname}
                 h3 Suite type: #{reservation.suiteType}
