--- a/views/profile/phome.pug
+++ b/views/profile/phome.pug
@@ -26,9 +26,9 @@ block main-grid
     if (alertMsg)
         +alert(alertMsg, alertType)
     +menu-item(
-     'Day Tickets',
-     'A day ticket grants you access to all Novapark theme park locations for 24 hours. Choose any of the 3 types of day ticket passes',
-     'buy ticket',
+     'Day Passes',
+     'A day pass grants you access to all Novapark theme park locations for 24 hours. Choose any of the 3 types of day passes',
+     'buy pass',
      '/profile/buy-ticket',
      data[0]
     )
