--- a/views/profile/refund-ticket.pug
+++ b/views/profile/refund-ticket.pug
@@ -3,7 +3,7 @@ extends ../components/profile.pug
 block main-grid
 
     if tnum
-        h1.title Ticket details 
+        h1.title Visitor pass details 
         .mt-3.mb-1.ticket-field 
             h6 First name:
             span #{fname}
@@ -11,14 +11,14 @@ block main-grid
             h6 Last name:
             span #{lname}
         .mb-1.ticket-field 
-            h6 Ticket number:
+            h6 Pass number:
             span #{tnum}
         .mb-1.ticket-field 
-            h6 Ticket type:
+            h6 Pass type:
             span #{ttype}
         .mt-1
             form(action="/profile/refund-ticket", method="post")
                 button(type="submit").btn.btn-danger Refund
     else 
-        p You have no ticket
+        p You have no pass yet
 
