--- a/views/components/sidebar.pug
+++ b/views/components/sidebar.pug
@@ -6,13 +6,5 @@
         li.py-2 
             a(href="/profile/reset-password") Reset password
         li.py-2
-            a(href="/profile/manage-resort-reservation") Manage resort reservations
-        li.py-2
-            a(href="/profile/buy-ticket") Buy tickets
-        li.py-2 
-            a(href="/profile/refund-ticket") Refund ticket 
-        li.py-2 
-            a(href="/profile/manage-restaurant-reservation") Manage restaurant reservations
-        li.py-2 
-            a(href="/profile/edit-visitor") Edit visitor registration
+            a(href="/profile/manage-resort-reservation") Manage events
     
